--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
-monitor_speed = 115200
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.23
+	lvgl/lvgl@^8.3.4
